Criação da folha de estilos

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
-<html>
+﻿<html>
 
 	<head>
 		<meta charset="UTF-8"/>
 		<title>Página princiapl do repositório</title>
+		<link rel="stylesheet" src="estilos.css"/>
 	</head>
 
 	<body>
