corrigindo o nome da página

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 	<head>
 		<meta charset="UTF-8"/>
-		<title>Página princiapl do repositório</title>
+		<title>Página princiapl do site</title>
 		<link rel="stylesheet" src="estilos.css"/>
 	</head>
 
