nova característica do git na home

--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
 			do sistema</li>
 			
 			<li>E tudo isso sem precisar de conexao com a internet.</li>
+
+			<li>Entre outros recursos.</li>
 		</ul>
 		
-		--- Fim da página ---
 	</body>
 
 </html>
